--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=place-service-api
 spring.sql.init.mode=always
+
+logging.level.io.asyncer.r2dbc.mysql.QUERY=DEBUG
+logging.level.io.asyncer.r2dbc.mysql.PARAM=DEBUG
