--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.sql.init.mode=always
 
 logging.level.io.asyncer.r2dbc.mysql.QUERY=DEBUG
 logging.level.io.asyncer.r2dbc.mysql.PARAM=DEBUG
+springdoc.swagger-ui.path=/swagger-ui.html
